# my-stock-app

./: .env  .flake8  __main__.py  app.py  data.db  data_fetcher.py  database.py  model_trainer.py  notifier.py  plotter.py  pyproject.toml  requirements.in  requirements.txt  stock_price_model.pkl  valuation.py
.github/workflows/: python-app.yaml
static/css/: style.css
templates/: analysis.html  dashboard.html  index.html  job_logs.html  portfolio.html  stocks.html  valuation.html
tests/: test_valuation.py
